--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -1,19 +1,17 @@
 server:
-    port: 8081
+  port: 8088
+
 spring:
   cloud:
     consul:
-      host: localhost
+      host: consul
       port: 8500
       discovery:
         service-name: SERVICE-CLIENT
+
   application:
     name: SERVICE-CLIENT
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/clientservicedb?createDatabaseIfNotExist=true
-    username: "root"
-    password: "1234567890"
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -21,3 +19,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
+
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://mysql:3306/Micro_ClientDB?createDatabaseIfNotExist=true
+    username: root
+    password: root
